feat: upgrade npm deps, added dev documentation and api reference