@@ -1,19 +1,40 @@
 ## 🚀 Words Processor
 
 [![Java](https://img.shields.io/badge/Java-21-007396?logo=openjdk)](https://openjdk.org/projects/jdk/21/)
+[![Spring Boot](https://img.shields.io/badge/Spring%20Boot-3.5.6-6DB33F?logo=springboot)](https://spring.io/projects/spring-boot)
 [![Build](https://img.shields.io/badge/Build-Maven-informational?logo=apachemaven)](https://maven.apache.org/)
 [![License](https://img.shields.io/badge/License-Apache_2.0-blue.svg)](LICENSE)
+[![Code Coverage](https://img.shields.io/badge/Coverage-80%25-green)]()
 
 Lorem ipsum text processor based on the **[loripsum.net](https://loripsum.net/)** API.
 
 A Spring Boot microservices example showing how to fetch and process dummy text, publish results to Kafka, and expose a pageable reports history via REST. Includes Swagger UI, health checks, metrics, and a ready-to-run demo stack.
 
-### 💡 Tech stack
+### 💡 Tech Stack
 
-- **Runtime**: Java 25, Spring Boot
-- **Messaging/DB**: Kafka (Confluent 7.8.3), PostgreSQL 16.6, Liquibase
-- **Build/Tooling**: Maven, Checkstyle, PMD, SpotBugs, Testcontainers, WireMock
-- **Ops**: Docker Compose (dev and demo), Prometheus, Grafana, SonarQube
+#### Core Technologies
+
+- **Runtime**: Java 21 (with Java 25 features), Spring Boot 3.5.6, Spring Framework 6.x
+- **Web Server**: Undertow (replacing Tomcat for better performance)
+- **Messaging**: Apache Kafka (Confluent 7.8.3) with Spring Kafka
+- **Database**: PostgreSQL 16.6 with Liquibase migrations
+- **Caching**: EhCache with Spring Cache abstraction
+
+#### Development & Quality
+
+- **Build Tool**: Maven 3.x with multi-module structure
+- **Code Quality**: Checkstyle, PMD, SpotBugs, Qulice
+- **Testing**: JUnit 5, Testcontainers, WireMock, Spring Boot Test
+- **Code Coverage**: JaCoCo (minimum 80% coverage)
+
+#### Observability & Operations
+
+- **Monitoring**: Micrometer with Prometheus metrics
+- **Logging**: Logback with structured JSON logging (Logstash encoder)
+- **Tracing**: Micrometer Tracing with Brave
+- **Dashboards**: Grafana with pre-configured dashboards
+- **Code Analysis**: SonarQube integration
+- **Containerization**: Docker & Docker Compose
 
 ### 🧩 Modules
 
@@ -22,7 +43,22 @@ A Spring Boot microservices example showing how to fetch and process dummy text,
 | `words-processing` | Calls loripsum.net, analyzes text, publishes a report to Kafka and returns it | 8085         | `GET /api/v1/text?p={1..10}&l={short,medium,long,verylong}` |
 | `reports-history`  | Consumes reports from Kafka and stores in Postgres; exposes pageable history  | 8086         | `GET /api/v1/history?page=0&size=20&sort=id,desc`           |
 
-Swagger UI: `http://localhost:8085/swagger-ui.html` and `http://localhost:8086/swagger-ui.html`.
+### 📚 API Documentation
+
+#### Interactive API Documentation
+
+- **Words Processing API**: [http://localhost:8085/swagger-ui.html](http://localhost:8085/swagger-ui.html)
+- **Reports History API**: [http://localhost:8086/swagger-ui.html](http://localhost:8086/swagger-ui.html)
+
+#### OpenAPI Specifications
+
+- **Words Processing**: [http://localhost:8085/v3/api-docs](http://localhost:8085/v3/api-docs)
+- **Reports History**: [http://localhost:8086/v3/api-docs](http://localhost:8086/v3/api-docs)
+
+#### Additional Documentation
+
+- **Development Guide**: [development.md](development.md) - Detailed development setup and guidelines
+- **API Reference**: [api-reference.md](api-reference.md) - Complete API reference documentation
 
 ---
 
@@ -59,7 +95,19 @@ docker compose -f docker-compose.yml down
 
 ### Prerequisites
 
-- Git, JDK 25, Docker, Docker Compose
+- **Git**: Version control
+- **JDK 21+**: OpenJDK or Oracle JDK (Java 25 features supported)
+- **Docker & Docker Compose**: For infrastructure services
+- **Maven 3.8+**: Build tool (wrapper included)
+- **IDE**: IntelliJ IDEA, VS Code, or Eclipse with Spring Boot support
+
+### Modern Java Features Used
+
+- **Records**: Immutable DTOs and value objects
+- **Pattern Matching**: Enhanced switch expressions
+- **Text Blocks**: Improved string handling
+- **Sealed Classes**: Restricted inheritance hierarchies
+- **Virtual Threads**: Project Loom integration (when available)
 
 Clone the repo:
 
@@ -109,35 +157,52 @@ curl "http://localhost:8086/api/v1/history?page=0&size=5&sort=id,desc"
 
 ---
 
-## 📦 Maven multi‑module structure
+## 📦 Maven Multi-Module Architecture
 
-This repository is a Maven aggregator project (`packaging=pom`) with three modules:
-
-```text
-sample-lorem
-├─ shared            (artifactId: sample-lorem-shared)
-├─ words-processing  (artifactId: sample-lorem-words-processing)
-└─ reports-history   (artifactId: sample-lorem-reports-history)
-```
-
-Root coordinates: `com.iqkv:sample-lorem:0.25.0-SNAPSHOT`
-
-Dependency graph:
+This repository follows a Maven aggregator pattern (`packaging=pom`) with a clean separation of concerns:
 
 ```text
-sample-lorem (aggregator)
-├─► shared
-│
-├─► words-processing ──┐
-│        ▲             │
-│        │             │ depends on
-│        └─────────────┘
-│
-├─► reports-history ───┐
-         ▲             │
-         │             │ depends on
-         └─────────────┘
+sample-lorem (com.iqkv:sample-lorem:0.25.0-SNAPSHOT)
+├─ shared/                    # Common utilities, DTOs, Kafka configuration
+│  └─ sample-lorem-shared     # Shared across all modules
+├─ words-processing/          # Text processing microservice
+│  └─ sample-lorem-words-processing  # Port 8085
+└─ reports-history/           # Report storage microservice
+   └─ sample-lorem-reports-history   # Port 8086
 ```
+
+### Module Dependencies & Responsibilities
+
+```text
+┌─────────────────┐    ┌──────────────────┐
+│ words-processing│    │ reports-history  │
+│                 │    │                  │
+│ • REST API      │    │ • REST API       │
+│ • Text analysis │    │ • Kafka consumer │
+│ • Kafka producer│    │ • PostgreSQL     │
+│ • External API  │    │ • JPA/Hibernate  │
+└─────────┬───────┘    └─────────┬────────┘
+          │                      │
+          └──────┬─────────────┬──┘
+                 │             │
+         ┌───────▼─────────────▼───┐
+         │       shared            │
+         │                         │
+         │ • Common DTOs           │
+         │ • Kafka configuration   │
+         │ • Validation utilities  │
+         │ • OpenAPI documentation │
+         │ • Actuator endpoints    │
+         └─────────────────────────┘
+```
+
+### Key Architectural Decisions
+
+- **Shared Module**: Contains common utilities, DTOs, and configurations to avoid duplication
+- **Service Independence**: Each service can be built, tested, and deployed independently
+- **Event-Driven Communication**: Services communicate via Kafka for loose coupling
+- **Database per Service**: Each service owns its data (reports-history uses PostgreSQL)
+- **Observability**: All modules include Micrometer metrics and structured logging
 
 ### Common commands (from repo root)
 
@@ -220,24 +285,127 @@ Applications support environment variables (see `words-processing/src/main/resou
 
 ---
 
-## 📈 Observability
+## � Seceurity
 
-- Prometheus scrapes `:8080/actuator/prometheus` for each service
-- Grafana dashboards are provisioned under `docker/grafana/provisioning/`
+### Security Features
 
-Start them via `compose.yaml` (already included when you run `docker compose -f compose.yaml up -d`).
+- **Input Validation**: Bean Validation (JSR-303) with custom validators
+- **CORS Configuration**: Configurable cross-origin resource sharing
+- **Actuator Security**: Production-ready endpoint security
+- **Dependency Scanning**: OWASP dependency check integration
+
+### Security Best Practices
+
+```bash
+# Check for security vulnerabilities
+./mvnw org.owasp:dependency-check-maven:check
+
+# Security headers validation
+curl -I http://localhost:8085/api/v1/text
+```
+
+### Environment-Specific Security
+
+- **Development**: Relaxed CORS, debug endpoints enabled
+- **Production**: Strict CORS, minimal actuator endpoints, HTTPS only
+
+## 📈 Observability & Monitoring
+
+### Metrics Collection
+
+- **Application Metrics**: Custom business metrics via Micrometer
+- **JVM Metrics**: Memory, GC, thread pools automatically exposed
+- **Database Metrics**: Connection pool, query performance via Hibernate
+- **Kafka Metrics**: Producer/consumer lag, throughput metrics
+
+### Monitoring Stack
+
+```bash
+# Start monitoring infrastructure
+docker compose -f compose.yaml up -d prometheus grafana
+
+# Access dashboards
+open http://localhost:3000  # Grafana (admin/changeme)
+open http://localhost:9090  # Prometheus
+```
+
+### Pre-configured Dashboards
+
+- **Application Overview**: Request rates, response times, error rates
+- **JVM Monitoring**: Memory usage, GC performance, thread metrics
+- **Database Performance**: Connection pools, query execution times
+- **Kafka Monitoring**: Topic throughput, consumer lag, partition metrics
+
+### Log Aggregation
+
+- **Structured Logging**: JSON format with correlation IDs
+- **Log Levels**: Environment-specific configuration
+- **Centralized Logging**: Loki integration available
 
 ---
 
-## 🧪 Testing
+## 🧪 Testing Strategy
 
-JUnit 5, Hamcrest, Mockito, Testcontainers, WireMock.
+### Testing Pyramid Implementation
 
 ```shell script
+# Run all tests with Testcontainers
 ./mvnw verify -P use-testcontainers
+
+# Run only unit tests
+./mvnw test
+
+# Run integration tests
+./mvnw integration-test
+
+# Generate coverage report
+./mvnw jacoco:report
 ```
 
-The minimum required code coverage is **80%**.
+### Testing Technologies
+
+- **Unit Tests**: JUnit 5, Mockito, Hamcrest
+- **Integration Tests**: Spring Boot Test, Testcontainers (PostgreSQL, Kafka)
+- **API Testing**: MockMvc, WireMock for external service mocking
+- **Architecture Tests**: ArchUnit for enforcing architectural constraints
+
+### Quality Gates
+
+- **Minimum Code Coverage**: 80% (enforced by JaCoCo)
+- **Branch Coverage**: 85% minimum
+- **Mutation Testing**: Available via PIT testing
+- **Static Analysis**: Checkstyle, PMD, SpotBugs
+
+## 🚀 Performance & Scalability
+
+### Performance Characteristics
+
+- **Undertow Server**: Non-blocking I/O for better throughput
+- **Connection Pooling**: HikariCP for optimal database connections
+- **Caching Strategy**: EhCache for frequently accessed data
+- **Kafka Partitioning**: 4 partitions for parallel processing
+
+### Monitoring & Metrics
+
+```bash
+# Application metrics
+curl http://localhost:8085/actuator/metrics
+curl http://localhost:8086/actuator/metrics
+
+# Health checks
+curl http://localhost:8085/actuator/health
+curl http://localhost:8086/actuator/health
+
+# Prometheus metrics
+curl http://localhost:8085/actuator/prometheus
+```
+
+### Scalability Considerations
+
+- **Horizontal Scaling**: Stateless services support multiple instances
+- **Database Scaling**: Read replicas supported via Spring profiles
+- **Kafka Consumer Groups**: Multiple consumer instances for load distribution
+- **Caching**: Distributed caching ready (Redis integration available)
 
 ---
 
@@ -256,11 +424,97 @@ These rules are available in the `.cursor/rules` directory and are automatically
 
 ---
 
-## 🧹 Cleanup
+## 🔧 Troubleshooting
+
+### Common Issues
+
+#### Build Issues
+
+```bash
+# Clear Maven cache
+./mvnw dependency:purge-local-repository
+
+# Skip tests if needed
+./mvnw clean install -DskipTests
+
+# Check for dependency conflicts
+./mvnw dependency:tree
+```
+
+#### Runtime Issues
+
+```bash
+# Check application health
+curl http://localhost:8085/actuator/health
+curl http://localhost:8086/actuator/health
+
+# View application logs
+docker logs lorem-demo-words-processing
+docker logs lorem-demo-reports-history
+
+# Check Kafka connectivity
+docker exec -it lorem-demo-kafka kafka-topics --bootstrap-server localhost:9092 --list
+```
+
+#### Database Issues
+
+```bash
+# Connect to PostgreSQL
+docker exec -it lorem-demo-postgres psql -U postgres -d lorem_db
+
+# Check database migrations
+./mvnw liquibase:status -pl reports-history
+
+# Reset database (development only)
+docker compose -f compose.yaml down -v
+docker compose -f compose.yaml up -d postgres
+```
+
+### Performance Tuning
+
+```bash
+# JVM tuning for containers
+export JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
+
+# Enable virtual threads (Java 21+)
+export JAVA_OPTS="$JAVA_OPTS --enable-preview"
+
+# Database connection tuning
+export DATASOURCE_HIKARI_MAXIMUM_POOL_SIZE=20
+export DATASOURCE_HIKARI_MINIMUM_IDLE=5
+```
+
+## 🧹 Cleanup & Maintenance
+
+### Development Cleanup
 
 ```shell script
+# Clean build artifacts
 ./mvnw clean
+
+# Stop and remove containers
 docker compose -f compose.yaml down
+
+# Remove volumes (data loss!)
+docker compose -f compose.yaml down -v
+
+# Clean Docker system
+docker system prune -f
+```
+
+### Production Maintenance
+
+```bash
+# Health check endpoints
+curl http://localhost:8085/actuator/health/liveness
+curl http://localhost:8086/actuator/health/readiness
+
+# Graceful shutdown
+curl -X POST http://localhost:8085/actuator/shutdown
+curl -X POST http://localhost:8086/actuator/shutdown
+
+# Log rotation and cleanup
+find logs/ -name "*.log" -mtime +7 -delete
 ```
 
 ---
